add_library(feup-aeda-proj1 model/company/company.cpp model/user/i_user.h model/user/user_manager.cpp auth/current_session.cpp model/rental/rental_manager.cpp model/rental/rental_manager.h model/rental/rental.cpp model/rental/rental.h model/vehicle/i_vehicle.cpp model/vehicle/i_vehicle.h model/offer/offer.cpp model/offer/offer.h model/schedule/schedule.cpp model/schedule/schedule.h util/date.cpp util/date.h exception/invalid_date_exception.cpp exception/invalid_date_exception.h model/preference/preference.cpp model/preference/preference.h model/offer/offer_manager.cpp model/offer/offer_manager.h model/vehicle/i_commercial_vehicle.h model/user/i_provider.h model/vehicle/vehicle_list.cpp model/vehicle/vehicle_list.h model/user/client.cpp model/user/client.h model/user/client_company.cpp model/user/client_company.h model/user/admin.cpp model/user/admin.h)

add_executable(application main.cpp model/company/company.cpp model/user/i_user.h model/user/user_manager.cpp auth/current_session.cpp model/rental/rental_manager.cpp model/rental/rental_manager.h model/rental/rental.cpp model/rental/rental.h model/vehicle/i_vehicle.cpp model/vehicle/i_vehicle.h model/offer/offer.cpp model/offer/offer.h model/schedule/schedule.cpp model/schedule/schedule.h util/date.cpp util/date.h exception/invalid_date_exception.cpp exception/invalid_date_exception.h model/user/i_renter.h model/preference/preference.cpp model/preference/preference.h model/offer/offer_manager.cpp model/offer/offer_manager.h model/vehicle/i_passenger_vehicle.h model/vehicle/i_commercial_vehicle.h model/user/i_provider.h model/vehicle/vehicle_list.cpp model/vehicle/vehicle_list.h model/user/client.cpp model/user/client.h model/user/client_company.cpp model/user/client_company.h model/user/admin.cpp model/user/admin.h)

target_include_directories(feup-aeda-proj1 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(feup-aeda-proj1 PUBLIC coverage_config gtest_main)